--- a/projects/ngx-coding-components/src/lib/var-coding/single-code.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/single-code.component.html
@@ -1,6 +1,6 @@
 <div class="fx-row-start-stretch code fx-gap-10">
   @if (code) {
-    <button mat-icon-button [matMenuTriggerFor]="selectCodeType">
+    <button mat-icon-button [matMenuTriggerFor]="selectCodeType" [disabled]="schemerService.userRole !== 'RW_MAXIMAL'">
       @if (code.type === 'FULL_CREDIT') {
         <mat-icon style="color: limegreen">done_all</mat-icon>
       } @else if (code.type === 'PARTIAL_CREDIT') {
@@ -48,7 +48,7 @@
       <div class="code-main-data fx-row-start-center fx-gap-5">
         @if (code.id === null) {
           <div class="fx-flex-fill" [style.padding-left.px]="8">
-            <p>{{'code.prompt.add-' + code.type | translate}}; {{'code.is-null' | translate}}</p>
+            <p>{{'code.type-label.' + code.type | translate}}; {{'code.is-null' | translate}}</p>
           </div>
           <button mat-icon-button [style.width.px]="50"
                   (click)="setCodeValid()"
@@ -98,15 +98,13 @@
           }
         }
       </div>
-      @if (!['RESIDUAL', 'RESIDUAL_AUTO'].includes(code.type)) {
-        @if (codeModel !== 'MANUAL_ONLY') {
-          <code-rules [style.padding-left.px]="4" [style.height]="'calc(100% - 60px)'"
-                      [code]="code" [fragmentMode]="fragmentMode" [varInfo]="varInfo"
-                      (codeRulesChanged)="setCodeChanged()"></code-rules>
-        } @else if (codeModel === 'MANUAL_ONLY') {
-          <code-instruction [code]="code" (codeDataChanged)="setCodeChanged()"
-                            [style.max-height.px]="250"></code-instruction>
-        }
+      @if (codeModel !== 'MANUAL_ONLY') {
+        <code-rules [style.padding-left.px]="4" [style.height]="'calc(100% - 60px)'"
+                    [code]="code" [fragmentMode]="fragmentMode" [varInfo]="varInfo"
+                    (codeRulesChanged)="setCodeChanged()"></code-rules>
+      } @else if (codeModel === 'MANUAL_ONLY') {
+        <code-instruction [code]="code" (codeDataChanged)="setCodeChanged()"
+                          [style.max-height.px]="250"></code-instruction>
       }
     </div>
     @if (codeModel === 'NONE') {
