--- a/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
@@ -9,7 +9,7 @@
       <div class="fx-column-start-stretch fx-gap-10"  [style.width.%]="30">
         <mat-form-field>
           <mat-label>{{'description-position' | translate}}</mat-label>
-          <input matInput [(ngModel)]="varCoding.label"
+          <input matInput [(ngModel)]="varCoding.label" [disabled]="schemerService.userRole === 'RO'"
             (change)="lastChangeFrom$.next('label')">
         </mat-form-field>
         <div class="fx-row-start-stretch fx-gap-10">
@@ -41,14 +41,13 @@
           </button>
         </div>
         <div class="fx-row-start-start fx-gap-5" >
-          @if (schemerService.userRole === 'RW_MAXIMAL') {
-            <button mat-icon-button
-                    [matMenuTriggerFor]="menuAddCode"
-                    [matTooltip]="'code.prompt.add' | translate"
-                    matTooltipPosition="above">
-              <mat-icon>add</mat-icon>
-            </button>
-          }
+          <button mat-icon-button
+                  [disabled]="schemerService.userRole !== 'RW_MAXIMAL'"
+                  [matMenuTriggerFor]="menuAddCode"
+                  [matTooltip]="'code.prompt.add' | translate"
+                  matTooltipPosition="above">
+            <mat-icon>add</mat-icon>
+          </button>
           <mat-menu #menuAddCode>
             @for (codeType of schemerService.orderOfCodeTypes; track codeType) {
               <button mat-menu-item (click)="addCode(codeType)">
@@ -76,12 +75,13 @@
               }
             }
           </mat-menu>
-          <button mat-icon-button (click)="smartSchemer($event)"
+          <button mat-icon-button (click)="smartSchemer($event)" [disabled]="schemerService.userRole === 'RO'"
                   [matTooltip]="'click.smart-schemer' | translate">
             <mat-icon><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"/></svg></mat-icon>
           </button>
           <mat-button-toggle-group
             [(value)]="varCoding.codeModel"
+            [disabled]="schemerService.userRole === 'RO'"
             hideSingleSelectionIndicator="true"
           >
             <mat-button-toggle [value]="'NONE'" [matTooltip]="'code-model.NONE' | translate"><mat-icon>vertical_split</mat-icon></mat-button-toggle>
@@ -101,6 +101,7 @@
             <div class="fx-row-start-center">
               <div [style.color]="'grey'" [style.font-size]="'smaller'">{{'manual-instruction.coding.title' | translate}}</div>
               <button mat-icon-button [matTooltip]="'manual-instruction.coding.prompt-edit' | translate"
+                      [disabled]="schemerService.userRole === 'RO'"
                 (click)="editTextDialog_manualInstruction()">
                 <mat-icon>edit</mat-icon>
               </button>
