--- a/projects/ngx-coding-components/src/lib/schemer/schemer.component.html
+++ b/projects/ngx-coding-components/src/lib/schemer/schemer.component.html
@@ -11,7 +11,7 @@
                 class="var-list-entry"
                 [class]="varBasic.id === (selectedCoding$ | async)?.id ? 'selected' : 'not-selected'"
                 (click)="selectVarScheme(varBasic)">
-                {{ varBasic.id }}
+                {{ varBasic.alias || varBasic.id }}
               </a>
             </div>
           </mat-nav-list>
@@ -25,7 +25,7 @@
                 class="var-list-entry"
                 (click)="selectVarScheme(varScheme)"
                 [class]="varScheme.id === (selectedCoding$ | async)?.id ? 'selected' : 'not-selected'">
-                {{ varScheme.id }}
+                {{ varScheme.alias || varScheme.id }}
               </a>
             </div>
           </mat-nav-list>
@@ -33,11 +33,11 @@
       </div>
       <!-- # # # # # # # # # # # # # # # # # # # # # # # # -->
       <div class="var-list-buttons fx-row-space-between-center">
-        <button mat-button (click)="addVarScheme()"
+        <button mat-button (click)="addVarScheme()" [disabled]="schemerService.userRole === 'RO'"
           [matTooltip]="'varlist.add' | translate" matTooltipPosition="above">
           <mat-icon>add</mat-icon>
         </button>
-        <button mat-button [disabled]="(selectedCoding$ | async) === null"
+        <button mat-button [disabled]="(selectedCoding$ | async) === null || schemerService.userRole !== 'RW_MAXIMAL'"
           (click)="deleteVarScheme()" [matTooltip]="'varlist.delete' | translate" matTooltipPosition="above">
           <mat-icon>delete</mat-icon>
         </button>
@@ -45,11 +45,11 @@
           <mat-icon>menu</mat-icon>
         </button>
         <mat-menu #otherFunctions="matMenu">
-          <button mat-menu-item [disabled]="(selectedCoding$ | async) === null || (selectedCoding$ | async)?.sourceType === 'BASE'"
-                  (click)="renameVarScheme()">
+          <button mat-menu-item (click)="renameVarScheme()"
+                  [disabled]="(selectedCoding$ | async) === null || (selectedCoding$ | async)?.sourceType === 'BASE' || schemerService.userRole === 'RO'">
             <mat-icon>edit</mat-icon>{{'varlist.rename' | translate}}
           </button>
-          <button mat-menu-item [disabled]="(selectedCoding$ | async) === null" (click)="copyVarScheme()">
+          <button mat-menu-item [disabled]="(selectedCoding$ | async) === null || schemerService.userRole === 'RO'" (click)="copyVarScheme()">
             <mat-icon>content_copy</mat-icon>{{'varlist.copy' | translate}}
           </button>
           <button mat-menu-item (click)="checkVarScheme()">
