--- a/projects/ngx-coding-components/src/lib/var-coding/code-rules/code-rules.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/code-rules/code-rules.component.html
@@ -23,114 +23,26 @@
     </div>
   </mat-card-subtitle>
   <mat-card-content class="fx-column-start-stretch" [style.overflow-x]="'auto'">
-    <mat-tab-group dynamicHeight [class.header-less-tabs]="!code || code.ruleSets.length <= 1">
-      @for (ruleSet of code?.ruleSets; track ruleSet; let ruleSetIndex = $index) {
-        <mat-tab class="fx-column-start-stretch"
-          [label]="'Regelsatz ' + (ruleSetIndex + 1).toString(10)"
-          [style.overflow-x]="'auto'">
-          @for (rule of ruleSet.rules; track rule; let ruleIndex = $index) {
-            <div class="fx-row-start-center fx-flex-fill fx-gap-10"
-              (mouseover)="showCodeButtonsOf=rule.method" (mouseout)="showCodeButtonsOf=''">
-              <div class="fx-column-start-stretch fx-flex-fill">
-                <div class="rule" [matTooltip]="('rule.' + rule.method + '.description') | translate"
-                  matTooltipShowDelay="500">
-                  {{('rule.' + rule.method) | translate}}
-                </div>
-                @if (schemerService.ruleMethodParameterCount[rule.method] < 0) {
-                  <mat-form-field>
-                    @if (rule.parameters) {
-                      <textarea matInput [disabled]="schemerService.userRole === 'RO'"
-                        [(ngModel)]="rule.parameters[0]"
-                        (ngModelChange)="setCodeRulesChanged()"
-                        cdkTextareaAutosize
-                        cdkAutosizeMinRows="2"
-                      cdkAutosizeMaxRows="8"></textarea>
-                    }
-                  </mat-form-field>
-                }
-                @if (schemerService.ruleMethodParameterCount[rule.method] > 0) {
-                  <mat-form-field>
-                    @if (rule.parameters) {
-                      <input matInput [disabled]="schemerService.userRole === 'RO'"
-                        [(ngModel)]="rule.parameters[0]"
-                        (ngModelChange)="setCodeRulesChanged()">
-                    }
-                  </mat-form-field>
-                }
-                @if (schemerService.ruleMethodParameterCount[rule.method] > 1) {
-                  <mat-form-field>
-                    @if (rule.parameters) {
-                      <input matInput [disabled]="schemerService.userRole === 'RO'"
-                        [(ngModel)]="rule.parameters[1]"
-                        (ngModelChange)="setCodeRulesChanged()">
-                    }
-                  </mat-form-field>
-                }
-              </div>
-              <div class="fx-column-start-center">
-                <button mat-icon-button [matTooltip]="'rule.prompt.delete' | translate"
-                        [disabled]="schemerService.userRole === 'RO'"
-                        (click)="deleteRule(ruleSet, ruleIndex)"
-                        [class]="showCodeButtonsOf === rule.method ? 'buttonDisplay' : 'buttonHide'">
-                  <mat-icon>delete</mat-icon>
-                </button>
-                @if (fragmentMode) {
-                  @if (schemerService.userRole === 'RW_MAXIMAL') {
-                    <div>
-                      <button mat-flat-button (click)="editFragmentReference(rule)"
-                        [matTooltip]="'rule.reference.title' | translate">
-                        F {{ rule.fragment | ruleReference }}
-                      </button>
-                    </div>
-                  } @else {
-                    <div>F {{ rule.fragment | ruleReference }}</div>
-                  }
-                }
-              </div>
-            </div>
-          }
-          <div class="fx-row-space-between-center">
-              <button mat-icon-button [matMenuTriggerFor]="addRuleMenu" [disabled]="schemerService.userRole === 'RO'"
-                      [matTooltip]="'rule.prompt.add' | translate">
-                <mat-icon>add</mat-icon>
-              </button>
-
-            <mat-menu #addRuleMenu="matMenu">
-              @for (newSource of allRules; track newSource) {
-                  <button mat-menu-item
-                          (click)="addRule(ruleSet, newSource)">
-                    {{('rule.' + newSource) | translate}}
-                  </button>
-              }
-            </mat-menu>
-            @if (ruleSet.rules.length === 0) {
-              <div class="no-rules">{{'rule.no-rules' | translate}}</div>
-            }
-            @if (varInfo && varInfo.multiple && ruleSet.rules.length > 0 && schemerService.userRole === 'RW_MAXIMAL') {
-              <div>
-                <button mat-flat-button (click)="editArrayReference(ruleSet)"
-                  [matTooltip]="'rule-set.reference.title' | translate">
-                  A {{ ruleSet.valueArrayPos | ruleReference }}
-                </button>
-              </div>
-            }
-            @if (code && code.ruleSets.length > 1 && schemerService.userRole === 'RW_MAXIMAL') {
-              <button mat-icon-button [matTooltip]="'rule-set.prompt.delete' | translate"
-                (click)="deleteRuleSet(ruleSetIndex)">
-                <mat-icon>delete</mat-icon>
-              </button>
-            }
-            @if (ruleSet.rules.length > 1 && schemerService.userRole === 'RW_MAXIMAL') {
-              <mat-button-toggle-group appearance="legacy"
-                [(ngModel)]="ruleSet.ruleOperatorAnd"
-                [matTooltip]="'rule.prompt.operator' | translate">
-                <mat-button-toggle [value]="false">{{"rule.operator.false" | translate }}</mat-button-toggle>
-                <mat-button-toggle [value]="true">{{"rule.operator.true" | translate }}</mat-button-toggle>
-              </mat-button-toggle-group>
-            }
-          </div>
-        </mat-tab>
-      }
-    </mat-tab-group>
+    @if (code && code.ruleSets.length > 1) {
+      <mat-tab-group dynamicHeight class="fx-row-start-stretch">
+        @for (ruleSet of code?.ruleSets; track ruleSet; let ruleSetIndex = $index) {
+          <mat-tab class="fx-column-start-stretch"
+            [label]="'Regelsatz ' + (ruleSetIndex + 1).toString(10)"
+            [style.overflow-x]="'auto'">
+            <code-rule-list [fragmentMode]="fragmentMode || false" [ruleSet]="ruleSet" class="fx-flex-fill"
+                            [arrayMode]="varInfo && varInfo.multiple || false"
+                            (deleteRuleSetRequested)="deleteRuleSet(ruleSetIndex)"
+                            [canDeleteRuleSet]="true"
+                            (codeRulesChanged)="setCodeRulesChanged()"></code-rule-list>
+          </mat-tab>
+        }
+      </mat-tab-group>
+    } @else if (code && code.ruleSets.length === 1) {
+      <code-rule-list [fragmentMode]="fragmentMode || false" [ruleSet]="code.ruleSets[0]" class="fx-flex-fill"
+                      (deleteRuleSetRequested)="deleteRuleSet(-1)"
+                      [arrayMode]="varInfo && varInfo.multiple || false"
+                      [canDeleteRuleSet]="false"
+                      (codeRulesChanged)="setCodeRulesChanged()"></code-rule-list>
+    }
   </mat-card-content>
 </mat-card>
