--- a/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
@@ -160,6 +160,7 @@
       @for (code of varCoding.codes; track code; let codeIndex = $index) {
         <single-code (codeDataChanged)="lastChangeFrom$.next('single-code codes')" [varInfo]="varInfo"
                      [fragmentMode]="!!varCoding.fragmenting" [codeModel]="varCoding.codeModel"
+                     [hasResidualAutoCode]="hasResidualAutoCode"
                      [code]="code" [codeIndex]="codeIndex" [allCodes]="varCoding.codes"></single-code>
       }
       @if (varCoding.codes.length === 0) {
