--- a/projects/ngx-coding-components/src/lib/var-coding/single-code.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/single-code.component.html
@@ -2,7 +2,7 @@
   @if (code) {
     <button mat-icon-button [matMenuTriggerFor]="selectCodeType"
             [matTooltip]="'code.prompt.add-' + code.type | translate" [matTooltipShowDelay]="500"
-            [disabled]="schemerService.userRole !== 'RW_MAXIMAL'">
+            [disabled]="schemerService.userRole === 'RO'">
       @if (code.type === 'FULL_CREDIT') {
         <mat-icon style="color: limegreen">done_all</mat-icon>
       } @else if (code.type === 'PARTIAL_CREDIT') {
@@ -120,7 +120,7 @@
                           class="fx-flex-fill" [style.max-height.px]="300"></code-instruction>
       }
     }
-    <button mat-icon-button (click)="deleteCode(codeIndex)" [disabled]="schemerService.userRole !== 'RW_MAXIMAL'"
+    <button mat-icon-button (click)="deleteCode(codeIndex)" [disabled]="schemerService.userRole === 'RO'"
             [matTooltip]="'code.prompt.delete' | translate">
       <mat-icon>delete</mat-icon>
     </button>
