--- a/projects/ngx-coding-components/src/lib/schemer/schemer.component.html
+++ b/projects/ngx-coding-components/src/lib/schemer/schemer.component.html
@@ -1,5 +1,5 @@
 <div class="scheme-body fx-row-space-between-stretch">
-  @if (schemerService.allVariableIds.length > 0) {
+  @if (basicVariables.length !== 0) {
     <div class="navi-bar fx-column-space-between-stretch">
       <div class="var-scheme-list fx-flex">
         <div class="var-list-header">{{'varlist.base' | translate}}</div>
@@ -65,7 +65,7 @@
     </div>
   }
 
-  @if (schemerService.allVariableIds.length === 0) {
+  @if (basicVariables.length === 0) {
     <div
     style="margin: 20px;">{{'data-error.base-variables-missing' | translate}}</div>
   }
