--- a/projects/ngx-coding-components/src/lib/var-coding/single-code.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/single-code.component.html
@@ -54,7 +54,7 @@
       <div class="code-main-data fx-row-start-center fx-gap-5">
         @if (code.id === 'INVALID') {
           <div [class]="code.type === 'RESIDUAL_AUTO' ? 'type-residual-auto fx-flex-fill' : 'fx-flex-fill type-no-residual-auto'">
-            {{'code.type-label.' + code?.type | translate}}; {{'code.is-invalid' | translate}}
+            {{'code.type-label.' + code.type | translate}}; {{'code.is-invalid' | translate}}
           </div>
           <button mat-icon-button [style.width.px]="50"
                   (click)="setCodeValid()"
@@ -63,7 +63,7 @@
         }
         @if (code.id === 'INTENDED_INCOMPLETE') {
           <div [class]="'type-intended-incomplete fx-flex-fill'">
-            {{'code.type-label.' + code?.type | translate}}
+            {{'code.type-label.' + code.type | translate}}
           </div>
         }
         @if (code.id !== 'INVALID' && code.id !== 'INTENDED_INCOMPLETE') {
